arrow button collapsing issue fixed

--- a/styles/scss/partials/_home.scss
+++ b/styles/scss/partials/_home.scss
@@ -146,6 +146,7 @@ header {
 }
 
 .intro-container {
+  padding-bottom: 100px;
   p {
     font-size: calc(2rem + (32 - 20) * ((100vw - 320px) / (1080 - 320)));
     line-height: 1.2;
