--- a/styles/styles.css
+++ b/styles/styles.css
@@ -604,6 +604,9 @@ header {
   visibility: visible;
 }
 
+.intro-container {
+  padding-bottom: 100px;
+}
 .intro-container p {
   font-size: calc(2rem + (32 - 20) * ((100vw - 320px) / (1080 - 320)));
   line-height: 1.2;
